welcome.lessons.welcome.bat.bool2.TwoAsOne.scala.error
twoAsOne:4: error: illegal start of simple expression
  else if (c+b==a) [return true]
                   ^